# xr-native-sensor-access

./: README.md  index.html  settings.gradle.kts
.github/: copilot-instructions.md
.github/instructions/: cplusplus.instructions.md  gilfoyle-code-review.instructions.md  java.instructions.md  kotlin.instructions.md
.github/prompts/: create-readme.prompt.md  first-ask.prompt.md  review-and-refactor.prompt.md
app/: build.gradle.kts
app/src/androidTest/java/com/tw0b33rs/nativesensoraccess/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/camera/: camera_data.h  camera_manager.cpp  camera_manager.h  camera_stream.cpp  camera_stream.h
app/src/main/cpp/common/: callback_handler.h  ring_buffer.h  sensor_types.h
app/src/main/cpp/imu/: imu_data.h  imu_manager.cpp  imu_manager.h
app/src/main/cpp/jni/: jni_bridge.cpp  jni_helpers.h
app/src/main/java/com/tw0b33rs/nativesensoraccess/: MainActivity.kt
app/src/main/java/com/tw0b33rs/nativesensoraccess/logging/: SensorLogger.kt
app/src/main/java/com/tw0b33rs/nativesensoraccess/sensor/: CameraBridge.kt  NativeSensorBridge.kt  SensorData.kt  SensorViewModel.kt
app/src/main/java/com/tw0b33rs/nativesensoraccess/ui/: CameraPreview.kt
app/src/main/java/com/tw0b33rs/nativesensoraccess/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/tw0b33rs/nativesensoraccess/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
